--- a/src/templates/projects/cv_delete.html
+++ b/src/templates/projects/cv_delete.html
@@ -1,23 +1,28 @@
-{% extends 'base.html' %}
+{% extends 'base_list.html' %}
 {% load staticfiles %}
 {% load crispy_forms_tags %}
 
 {% block title %}Delete CV{% endblock %}
 
-{% block content %}
-    <br>
-    <h3>Delete CV</h3>
-    <br>
-    {% if user.is_authenticated %}
-        <form method="POST">
-            {% csrf_token %}
-            <strong>{{ object }}</strong>
-            <br>
-            <spam>
-                Are you sure you want to delete this CV?
-                <input class="btn btn-danger" type="submit" value="Yes, I am sure">
-                <a class="btn btn-warning" href="{% url 'projects:cv_list' %}">Cancel</a>
-            </spam>
-        </form>
-    {% endif %}
+{% block list_title %}Delete CV<br><h2>{{ object }}</h2>{% endblock %}
+
+{% block list_content %}
+    <div class="row">
+        <div class="col-md-2 col-lg-4"></div>
+        <div class="col-md-8 col-lg-4 mb-3" style="background: rgba(70, 89, 18, 0.08); border-radius: 0.5em; margin: 0.5rem;">
+            <div class="m-3">
+            <form class="text-center" method="POST">
+                {% csrf_token %}
+                <strong>{{ object }}</strong>
+                <br><br>
+                <spam>
+                    Are you sure you want to delete this CV?
+                    <input class="btn btn-success" type="submit" value="Yes, I am sure">
+                    <a class="btn btn-danger" href="{% url 'projects:cv_list' %}">Cancel</a>
+                </spam>
+
+            </form>
+        </div>
+        <div class="col-md-2 col-lg-4"></div>
+    </div>
 {% endblock %}
