--- a/src/templates/projects/image_delete.html
+++ b/src/templates/projects/image_delete.html
@@ -1,21 +1,27 @@
-{% extends 'base.html' %}
+{% extends 'base_list.html' %}
 {% load staticfiles %}
+{% load crispy_forms_tags %}
 
 {% block title %}Delete image{% endblock %}
 
-{% block content %}
-    <br>
-    {% if user.is_authenticated %}
-        <form method="POST">
-            {% csrf_token %}
-            <img src="{{ object.image.url }}" width='50%' alt="{{ obj.url }}">
-            <br><br><p>Project: {{ object.project.title }}</p>
-            <spam>
-                Are you sure you want to delete this image?
-                <input class="btn btn-danger" type="submit" value="Yes, I am sure">
-                <a class="btn btn-warning" href="{% url 'projects:project_detail' slug=object.project.slug %}">Cancel</a>
-            </spam>
-        </form>
-    {% endif %}
+{% block list_title %}Delete Image<br><h2>{{ object }}</h2>{% endblock %}
 
+
+{% block list_content %}
+    <div class="row">
+        <div class="mb-3 text-center" style="background: rgba(70, 89, 18, 0.08); border-radius: 0.5em; margin: 0.5rem;">
+            <div class="m-3">
+                <form method="POST">
+                    {% csrf_token %}
+                    <img class="mb-3" src="{{ object.image.url }}" width='75%' alt="{{ obj.url }}">
+                    <br>
+                    <spam>
+                        Are you sure you want to <strong>delete</strong> this image?<br>
+                        <input class="btn btn-success" type="submit" value="Yes, I am sure">
+                        <a class="btn btn-danger" href="{% url 'projects:project_update' slug=object.project.slug %}">Cancel</a>
+                    </spam>
+                </form>
+            </div>
+
+    </div>
 {% endblock %}
