--- a/src/templates/projects/project_detail.html
+++ b/src/templates/projects/project_detail.html
@@ -3,27 +3,32 @@
 
 {% block title %}Detail Project{% endblock %}
 
+{% block list_title %}{{ object.title }}{% endblock %}
 
-<form class="align-items-center">
-    {% csrf_token %}
-    {% block list_title %}{{ object.title }}{% endblock %}
+{% block list_content %}
 
-    {% block list_content %}
-        <div class="text-center mb-5">
-            {% for line in object.get_description %}
-                <ul class="list-group list-unstyled">
-                    <li>{{ line }}</li>
-                </ul>
-            {% endfor %}
+    <div class="row">
+        <div class="mb-3 text-center" style="background: rgba(70, 89, 18, 0.08); border-radius: 0.5em; margin: 0.5rem;">
+            <div class="m-3">
+                <form method="POST">
+                    {% csrf_token %}
+                    {% for line in object.get_description %}
+                        <ul class="list-group list-unstyled">
+                            <li>{{ line }}</li>
+                        </ul>
+                    {% endfor %}
+                    <br>
+                    <br>
+                    {% for imag in object.images_set.all %}
+                        <a href="{{ imag.image.url }}">
+                            <img class="mb-1" src="{{ imag.image.url }}" width='49%' alt="{{ imag.image.url }}">
+                        </a>
+                    {% endfor %}
+
+                </form>
+            </div>
         </div>
-
-        <div class="row">
-            {% for imag in object.images_set.all %}
-                <span class="col-md-6 mb-3">
-                    <img class="card-img"  src="{{ imag.image.url }}" width='100%' alt="{{ imag.image.url }}">
-                    </span>
-            {% endfor %}
-        </div>
+    </div>
 
         {% if user.is_authenticated %}
             <a class="btn btn-success" href="{% url 'projects:project_update' object.slug %}">Update project</a>
@@ -32,7 +37,7 @@
         {% endif %}
 <a class="btn btn-secondary" href="{% url 'projects:project_list' %}">Back</a>
 
-    {% endblock %}
-</form>
+{% endblock %}
+
 
 
