--- a/src/templates/snippets/nav.html
+++ b/src/templates/snippets/nav.html
@@ -7,13 +7,17 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'projects:project_list' %}">Projects list</a>
+                <a class="nav-link" href="{% url 'projects:project_list' %}">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'projects:cv_list' %}">CV</a>
+                {% if user.is_authenticated %}
+                    <a class="nav-link" href="{% url 'projects:cv_list' %}">CV List</a>
+                {% else %}
+                    <a class="nav-link" href="{% url 'projects:cv_list' %}">CV</a>
+                {% endif %}
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="{% url 'about' %}">About</a>
             </li>
             {% if user.is_authenticated %}
                 <li class="nav-item nav-custom">
