--- a/src/templates/projects/about.html
+++ b/src/templates/projects/about.html
@@ -8,9 +8,25 @@
 
 {% block list_content %}
     <div class="row mb-3" style="background: rgba(70, 89, 18, 0.08); border-radius: 0.5em; margin: 0.5rem;">
-            <div class="m-3">
+        <div class="m-3 text-center">
+            <h2 style="color: darkred; text-shadow: 0 5px 5px gray;">website under construction...</h2>
+            <hr>
+            <br><br><br>
             <p>
-                A self taught django developer from Plymouth, UK.
+                Self taught django developer from Plymouth, UK.
             </p>
+
+            <div class="row">
+                <div class="col-md-4"></div>
+                <div class="col-md-4">
+                    <img src="{% static 'images/portrait.jpg' %}" width="100%" alt="Portrait">
+                </div>
+                <div class="col-md-4"></div>
+            </div>
+
+            <div>
+                Contact: ionescuig@yahoo.com
+            </div>
+        </div>
     </div>
 {% endblock %}
