--- a/src/templates/projects/project_detail.html
+++ b/src/templates/projects/project_detail.html
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="mb-3 text-center" style="background: rgba(70, 89, 18, 0.08); border-radius: 0.5em; margin: 0.5rem;">
             <div class="m-3">
-                <form method="POST">
+                <form method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% for line in object.get_description %}
                         <ul class="list-group list-unstyled">
@@ -20,7 +20,7 @@
                     <br>
                     <br>
                     {% for imag in object.images_set.all %}
-                        <a href="{{ imag.image.url }}">
+                        <a href="{{ imag.image.url }}" target="_blank">
                             <img class="mb-1" src="{{ imag.image.url }}" width='49%' alt="{{ imag.image.url }}">
                         </a>
                     {% endfor %}
