--- a/src/static/css/base.css
+++ b/src/static/css/base.css
@@ -56,8 +56,7 @@ body {
     border-radius: 0.3em;
 }
 
-.nav-custom {
-    background: linear-gradient(
-            to bottom,
-            rgba(10, 10, 10, 0.4), rgba(0, 0, 0, 0.1));
+.navbar-dark .navbar-nav .nav-custom .nav-link {
+    color: yellow;
+    text-shadow: 0 0 10px darkred;
 }
