--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -12,8 +12,14 @@
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Overpass" rel="stylesheet">
 
+    <!--Font Awesome Icons-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+
     <!--Custom CSS-->
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+
+
     {% block head %}{% endblock %}
 
     <!--Favicon-->
