--- a/src/templates/snippets/nav.html
+++ b/src/templates/snippets/nav.html
@@ -9,12 +9,15 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'projects:project_list' %}">Projects</a>
             </li>
-            <li class="nav-item">
-                {% if user.is_authenticated %}
+            {% if user.is_authenticated %}
+                <li class="nav-item nav-custom">
                     <a class="nav-link" href="{% url 'projects:cv_list' %}">CV List</a>
-                {% else %}
+                </li>
+            {% else %}
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'projects:cv_list' %}">CV</a>
-                {% endif %}
+                </li>
+            {% endif %}
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'about' %}">About</a>
@@ -27,7 +30,10 @@
                     <a class="nav-link" href="{% url 'projects:cv_create' %}">Add CV</a>
                 </li>
                 <li class="nav-item nav-custom">
-                    <a class="nav-link" href="/admin" target="_blank">Admin Page</a>
+                    <a class="nav-link" href="/admin" target="_blank">
+                        Admin Page
+                        <i class="fas fa-external-link-square-alt"></i>
+                    </a>
                 </li>
             {% endif %}
 
