--- a/src/templates/projects/about.html
+++ b/src/templates/projects/about.html
@@ -19,7 +19,10 @@
             <div class="row">
                 <div class="col-md-4"></div>
                 <div class="col-md-4">
-                    <img src="{% static 'images/portrait.jpg' %}" width="100%" alt="Portrait">
+                    <img src="{% static 'images/portrait.jpg' %}"
+                         style="border-radius: 5px"
+                         width="100%"
+                         alt="Portrait">
                 </div>
                 <div class="col-md-4"></div>
             </div>
