--- a/src/templates/projects/project_detail.html
+++ b/src/templates/projects/project_detail.html
@@ -35,8 +35,12 @@
     </div>
 
         {% if user.is_authenticated %}
-            <a class="btn btn-success" href="{% url 'projects:project_update' object.slug %}">Update project</a>
-            <a class="btn btn-danger" href="{% url 'projects:project_delete' object.slug %}">Delete project</a>
+            <a class="btn btn-success" href="{% url 'projects:project_update' object.slug %}">
+                <i class="fas fa-edit"></i>
+                Update project</a>
+            <a class="btn btn-danger" href="{% url 'projects:project_delete' object.slug %}">
+                <i class="fas fa-trash-alt"></i>
+                Delete project</a>
             <hr>
         {% endif %}
 <a class="btn btn-secondary" href="{% url 'projects:project_list' %}">Back</a>
