--- a/src/templates/snippets/nav.html
+++ b/src/templates/snippets/nav.html
@@ -9,20 +9,20 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'projects:project_list' %}">Projects</a>
             </li>
-            {% if user.is_authenticated %}
-                <li class="nav-item nav-custom">
+            <li class="nav-item">
+                {% if user.is_authenticated %}
                     <a class="nav-link" href="{% url 'projects:cv_list' %}">CV List</a>
-                </li>
-            {% else %}
-                <li class="nav-item">
+                {% else %}
                     <a class="nav-link" href="{% url 'projects:cv_list' %}">CV</a>
-                </li>
-            {% endif %}
+                {% endif %}
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'about' %}">About</a>
             </li>
             {% if user.is_authenticated %}
+                <span class="nav-item nav-custom">
+                    <i class="nav-link fas fa-tools"></i>
+                </span>
                 <li class="nav-item nav-custom">
                     <a class="nav-link" href="{% url 'projects:project_create' %}">Add Project</a>
                 </li>
@@ -42,9 +42,10 @@
         {% if user.is_authenticated %}
             <div class="form-inline my-2 my-lg-0">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item nav-custom">
                         <div class="nav-link">
-                                User: <strong><em>{{ request.user.username }}</em></strong>
+                            <i class="fas fa-user"></i>
+                            <strong><em>{{ request.user.username }}</em></strong>
                         </div>
                     </li>
                 </ul>
