--- a/src/templates/projects/about.html
+++ b/src/templates/projects/about.html
@@ -9,16 +9,31 @@
 {% block list_content %}
     <div class="row mb-3" style="background: rgba(70, 89, 18, 0.08); border-radius: 0.5em; margin: 0.5rem;">
         <div class="m-3 text-center">
-            <h2 style="color: darkred; text-shadow: 0 5px 5px gray;">website under construction...</h2>
-            <hr>
-            <br><br><br>
-            <p>
-                Self taught django developer from Plymouth, UK.
-            </p>
+
+            <div>
+                <p>
+                    Self taught django developer from Plymouth, UK,
+                    looking to make a career in web development (django).
+                </p>
+                <p>
+                    A whiiile ago I finished a IT High School where I studied Pascal, C++ and
+                    <br>in 2014 I went to Plymouth City College for a
+                    BTEC Level3 – Certificate in IT (Distinction*) where I studied python.
+                    <br>
+                    This started me again and I wanted more (time flies really fast when having fun!).
+                </p>
+                <p>
+                    So, after tutorials and small projects I moved to the next step: django.
+                    <br>
+                    Now I am building my experience working on different projects in my limited time
+                    (with python, django, html, css, git, amazon aws s3, heroku, pycharm)
+                    <br>and looking to make this a full job.
+                </p>
+            </div>
 
             <div class="row">
                 <div class="col-md-4"></div>
-                <div class="col-md-4">
+                <div class="col-md-4 mb-3">
                     <img src="{% static 'images/portrait.jpg' %}"
                          style="border-radius: 5px"
                          width="100%"
