--- a/src/templates/projects/about.html
+++ b/src/templates/projects/about.html
@@ -43,7 +43,17 @@
             </div>
 
             <div>
-                Contact: ionescuig@yahoo.com
+                <a class="btn btn-primary"
+                   href="https://www.linkedin.com/in/gabriel-ionescu/"
+                   style="background-color: #1C77B5;"
+                   target="_blank">
+                    <i class="fab fa-linkedin fa-lg" style="color: #FAFCFE;"></i>
+                    LinkedIn</a>
+                <a class="btn btn-primary"
+                   href="mailto: ionescuig@yahoo.com"
+                   style="background-color: #1C77B5;">
+                    <i class="fas fa-envelope fa-lg" style="color: #FAFCFE;"></i>
+                    Email</a>
             </div>
         </div>
     </div>
