--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -5,6 +5,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta property='og:title' content='Gabriel Ionescu'/>
+    <meta property='og:image' content='{% static 'favicon/favicon.png' %}'/>
+    <meta property='og:description' content='portfolio'/>
+    <meta property='og:url' content='https://www.gabriel-ionescu.com' />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
