--- a/src/templates/projects/project_detail.html
+++ b/src/templates/projects/project_detail.html
@@ -8,47 +8,55 @@
 {% block list_content %}
 
     <div class="row">
-        <div class="mb-3 text-center" style="background: rgba(70, 89, 18, 0.08); border-radius: 0.5em; margin: 0.5rem;">
+        <div class="mb-3 text-center obj-visible">
             <div class="m-3">
                 <form method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
-                    {% for line in object.get_description %}
-                        <ul class="list-group list-unstyled">
-                            <li>{{ line }}</li>
-                        </ul>
-                    {% endfor %}
 
-                    {% if object.get_technologies|first != '' %}
-                        <br>
-                        {% for tech in object.get_technologies %}
-                            <div style="display: inline-block">
-                                <img src="https://img.shields.io/badge/{{ tech }}-brightgreen.svg" alt="">
-                            </div>
-                        {% endfor %}
-                    {% endif %}
-                    <hr>
+                    <div class="row">
+                        <div class="col-md-7 text-justify">
+                            {% for line in object.get_description %}
+                                {% if line == '' %}
+                                    <br>
+                                {% endif %}
+                                <ul class="list-group list-unstyled">
+                                    <li>{{ line }}</li>
+                                </ul>
+                            {% endfor %}
+                            <hr>
+                            {% for tech in object.get_technologies %}
+                                <div style="display: inline-block">
+                                    <img src="https://img.shields.io/badge/{{ tech }}-brightgreen.svg" alt="">
+                                </div>
+                            {% endfor %}
 
-                    {% if object.link_host or object.link_github %}
-                        Links:
-                    {% endif %}
-                    {% if object.link_host %}
-                        <a class="btn btn-link" href="{{ object.link_host }}" target="_blank">{{ object.title }}</a>
-                    {% endif %}
-                    {% if object.link_github %}
-                        <a class="btn btn-link" href="{{ object.link_github }}" target="_blank">GitHub</a>
-                    {% endif %}
-                    <br>
-                    <br>
-                    {% for imag in object.images_set.all %}
-                        <a href="{{ imag.image.url }}" target="_blank">
-                            <img class="mb-1"
-                                 src="{{ imag.image.url }}"
-                                 style="border-radius: 5px"
-                                 width='49%'
-                                 alt="{{ imag.image.url }}">
-                        </a>
-                    {% endfor %}
+                            <br><br>
+                            {% if object.link_host or object.link_github %}
+                                Links:
+                            {% endif %}
 
+                            <a class="btn btn-link" href="{{ object.link_host }}" target="_blank">
+                                {% if 'heroku' in object.link_host %}
+                                    Heroku
+                                {% else %}
+                                    {{ object.title }}
+                                {% endif %}
+                            </a>
+                            <a class="btn btn-link" href="{{ object.link_github }}" target="_blank">GitHub</a>
+                        </div>
+
+                        <div class="col-md-5 text-justify">
+                            {% for imag in object.images_set.all %}
+                                <a href="{{ imag.image.url }}" target="_blank">
+                                    <img class="mb-1"
+                                         width='49%'
+                                         style="border-radius: 5px"
+                                         src="{{ imag.image.url }}"
+                                         alt="{{ imag.image.url }}">
+                                </a>
+                            {% endfor %}
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
@@ -63,7 +71,7 @@
                 Delete project</a>
             <hr>
         {% endif %}
-<a class="btn btn-secondary" href="{% url 'projects:project_list' %}">Back</a>
+<a class="btn-more" href="{% url 'projects:project_list' %}">Back</a>
 
 {% endblock %}
 
