--- a/src/templates/projects/project_list.html
+++ b/src/templates/projects/project_list.html
@@ -4,40 +4,35 @@
 {% block title %}Projects{% endblock %}
 
 {% block list_title %}Projects{% endblock %}
+
 {% block list_content %}
     {% if object_list %}
         {% for obj in object_list %}
             {% if obj.visible %}
-                <div class="row mb-3"
-                     style="background: rgba(70, 89, 18, 0.08); border-radius: 0.5em; padding: 1rem; margin: 0.5rem">
+                <div class="row mb-3 obj-visible">
             {% else %}
-                <div class="row mb-3"
-                     style="background: rgba(200, 89, 18, 0.5); border-radius: 0.5em; padding: 1rem; margin: 0.5rem">
+                <div class="row mb-3 obj-invisible">
             {% endif %}
 
                     <div class="col-lg-6 align-self-center">
-                        <img src="{{ obj.images_set.first.image.url }}"
-                             style="border-radius: 5px"
+                        <img style="border-radius: 5px"
                              width="100%"
+                             src="{{ obj.images_set.first.image.url }}"
                              alt="{{ obj.images_set.first.image.url }}">
                     </div>
 
                     <div class="col-lg-6">
                         <div class="card-body">
-                            <h5 class="card-title" style="font-family: 'Overpass', sans-serif; font-size: 2em">
+                            <h5 class="card-title">
                                 <strong>
-                                    {% if obj.link_host %}
-                                        <a id="obj-title" href="{{ obj.link_host }}" target="_blank">
-                                            {{ obj.title }}</a>
-                                    {% else %}
-                                        {{ obj.title }}
-                                    {% endif %}
-                                </strong></h5>
+                                    <a id="obj-title" href="{{ obj.link_host }}" target="_blank">{{ obj.title }}</a>
+                                </strong>
+                            </h5>
                             <p class="card-text text-muted text-justify">{{ obj.get_description|first }}</p>
-                            <a href="{{ obj.get_absolute_url }}" class="btn btn-info">More</a>
+                            <hr>
+                            <a href="{{ obj.get_absolute_url }}" class="btn-more"><strong>More details</strong></a>
                         </div>
                     </div>
-
                 </div>
 
         {% endfor %}
