--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -34,7 +34,7 @@
 <body>
 
 {% include 'snippets/nav.html' %}
-    <div class="container-fluid">
+    <div class="container-fluid h-100">
         {% block content %}{% endblock %}
     </div>
 
