--- a/src/templates/base_list.html
+++ b/src/templates/base_list.html
@@ -8,22 +8,16 @@
 {% block title %}{% endblock %}
 
 {% block content %}
-    <div class="row" style="margin-top: 3em; margin-bottom: 1em;">
-        <div class="col-md-1 col-lg-2"></div>
-        <div class="col-md-10 col-lg-8">
-            <div class="text-center">
-                <h1 style="font-family: 'Overpass', sans-serif; color: #d5ea9f; text-shadow: 0 0 15px black;">
-                    <strong>{% block list_title %}{% endblock %}</strong></h1>
-            </div>
+
+    <div class="row text-center mt-4 mb-2">
+        <div class="col-sm-8 mx-auto">
+            <h1 id="list-title"><strong>{% block list_title %}{% endblock %}</strong></h1>
         </div>
-        <div class="col-md-1 col-lg-2"></div>
     </div>
 
     <div class="row">
-        <div class="col-md-1 col-lg-2"></div>
-        <div class="col-md-10 col-lg-8">
+        <div class="col-sm-8 mx-auto">
             {% block list_content %}{% endblock %}
         </div>
-        <div class="col-md-1 col-lg-2"></div>
     </div>
 {% endblock %}
