--- a/src/templates/projects/cv_list.html
+++ b/src/templates/projects/cv_list.html
@@ -12,22 +12,14 @@
 {% endblock %}
 
 {% block list_content %}
-    {% if no_download %}
-        <h1 class="text-center" style="color: red"><strong>{{ no_download }}</strong></h1>
-        <br><br>
-    {% endif %}
-    <br>
     {% if user.is_authenticated %}
         {% if object_list %}
             {% for obj in object_list %}
                     <div class="row mb-2">
-                        <div class="col-sm-3"></div>
                         {% if obj.visible %}
-                            <div class="col-sm-6"
-                                 style="background: rgba(70, 89, 18, 0.3); border-radius: 0.5em; margin: 0.5rem;">
+                            <div class="col-sm-10 mx-auto obj-visible">
                         {% else %}
-                            <div class="col-sm-6"
-                                 style="background: rgba(70, 89, 18, 0.08); border-radius: 0.5em; margin: 0.5rem;">
+                            <div class="col-sm-10 mx-auto obj-invisible">
                         {% endif %}
                                 <div class="row mt-2 mb-2">
                                     <div class="col-sm-6">
@@ -35,9 +27,6 @@
                                         <p class="text-muted">
                                             <small>Created: {{ obj.created|date:'d M Y - H:i' }}</small>
                                         </p>
-                                        {% if obj.visible %}
-                                            <spam style="color: #37A745"><em>Active</em></spam>
-                                        {% endif %}
                                     </div>
                                     <div class="col-sm-6 text-right">
                                         <a class="btn btn-success btn-sm mb-1"
@@ -58,24 +47,40 @@
                                     </div>
                                 </div>
                             </div>
-                        <div class="col-sm-3"></div>
                     </div>
             {% endfor %}
-            <div class="text-center">
-                <a class="btn btn-danger" href="{% url 'projects:cv_create' %}">Add CV</a>
-            </div>
         {% else %}
-            <h1 class="text-center" style="color: red"><strong>No CV yet</strong></h1>
+            <div class="col-sm-10 mx-auto obj-visible">
+                <h1 class="text-center" style="color: red"><strong>No CV yet</strong></h1>
+            </div>
         {% endif %}
+        <div class="text-center">
+            <a class="btn btn-success" href="{% url 'projects:cv_create' %}">Add CV</a>
+        </div>
 
     {% else %}
         <div class="row">
-            {% if downloadable.document.url %}
-                <div class="col-md-4"></div>
-                <div class="col-md-4 text-center">
-                    <a class="btn btn-success btn-lg" href="{{ downloadable.document.url }}">Download CV</a>
+            {% if object_list %}
+                {% for cv in object_list %}
+                    <div class="col-sm-10 mx-auto obj-visible">
+                        <div class="row mt-2 mb-2">
+                            <div class="col-sm-8">
+                                <strong>{{ cv }}</strong>
+                            </div>
+                            <div class="col-sm-4 text-right">
+                                <a class="btn btn-success btn-sm"
+                                   style="width: 7rem" href="{{ cv.document.url }}">
+                                    <i class="fas fa-download"></i>
+                                    Download
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            {% else %}
+                <div class="col-sm-10 mx-auto obj-visible">
+                    <h1 class="text-center" style="color: red"><strong>No CV yet</strong></h1>
                 </div>
-                <div class="col-md-4"></div>
             {% endif %}
         </div>
     {% endif %}
