--- a/src/templates/projects/home.html
+++ b/src/templates/projects/home.html
@@ -9,10 +9,19 @@
 
 {% block content %}
 
-    <div class="align-items-center" style="margin: 4em;">
-        <div class="text-center">
-            <h1 id="main-first" style="font-family: 'Overpass', sans-serif;">gabriel ionescu</h1>
-            <h2 id="main-second" style="font-family: 'Overpass', sans-serif;">django developer</h2>
+    <div class="row align-items-center text-center h-100">
+        <div class="col-md-8 mx-auto">
+            <h1 id="main-first">gabriel ionescu</h1>
+            <h2 id="main-second">django developer</h2>
+            <br><br>
+            <hr>
+
+            <h3 id="main-third">
+                <a class="nav-home" href="{% url 'projects:project_list' %}">Projects</a>
+                <a class="nav-home" href="{% url 'projects:cv_list' %}">CV</a>
+                <a class="nav-home" href="{% url 'about' %}">About</a>
+            </h3>
+
         </div>
     </div>
 
