--- a/src/templates/articles/update.html
+++ b/src/templates/articles/update.html
@@ -1,15 +1,17 @@
-{% extends 'base.html' %}
+{% extends 'base_list.html' %}
 {% load crispy_forms_tags %}
 
 {% block title %}
     Update article: {{ object }}
 {% endblock %}
 
-{% block content %}
+{% block list_title %}
+    Update article: {{ object }}
+{% endblock %}
+
+{% block list_content %}
     <div class="row">
         <div class="col-lg-6 offset-lg-3">
-            <h1 class="text-center">Update Article</h1>
-            <hr>
             <form method="POST">
                 {% csrf_token %}
                 {{ form.title|as_crispy_field }}
