--- a/src/templates/base_list.html
+++ b/src/templates/base_list.html
@@ -3,6 +3,7 @@
 
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/list.css' %}">
+    {% block head_extra %}{% endblock %}
 {% endblock %}
 
 {% block title %}{% endblock %}
